--- a/centro medico/RDLC/custom/siesta/Receta.rdlc
+++ b/centro medico/RDLC/custom/siesta/Receta.rdlc
@@ -48,7 +48,7 @@
         </ReportItems>
         <DataElementOutput>ContentsOnly</DataElementOutput>
         <Top>4.17737cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>5.94438cm</Height>
         <Width>18cm</Width>
         <Style>
@@ -75,7 +75,7 @@
         </Paragraphs>
         <rd:DefaultName>FECHA</rd:DefaultName>
         <Top>9.00132cm</Top>
-        <Left>11.25cm</Left>
+        <Left>10.9325cm</Left>
         <Height>0.63492cm</Height>
         <Width>6.75cm</Width>
         <ZIndex>1</ZIndex>
@@ -104,7 +104,7 @@ First(Fields!APELLIDO2.Value, "dsPaciente")</Value>
         </Paragraphs>
         <rd:DefaultName>NOMBRE</rd:DefaultName>
         <Top>2.44182cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>0.63492cm</Height>
         <Width>8.5cm</Width>
         <ZIndex>2</ZIndex>
@@ -131,7 +131,7 @@ First(Fields!APELLIDO2.Value, "dsPaciente")</Value>
         </Paragraphs>
         <rd:DefaultName>textbox1</rd:DefaultName>
         <Top>1.94182cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>0.50265cm</Height>
         <Width>6.24339cm</Width>
         <ZIndex>3</ZIndex>
@@ -158,7 +158,7 @@ First(Fields!APELLIDO2.Value, "dsPaciente")</Value>
         </Paragraphs>
         <rd:DefaultName>DESCRIPCION</rd:DefaultName>
         <Top>4.45382cm</Top>
-        <Left>0.75cm</Left>
+        <Left>0.4325cm</Left>
         <Height>0.75cm</Height>
         <Width>17.25cm</Width>
         <ZIndex>4</ZIndex>
@@ -187,7 +187,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
         </Paragraphs>
         <rd:DefaultName>NOMBREMEDICO</rd:DefaultName>
         <Top>0.25132cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>0.63492cm</Height>
         <Width>8.75cm</Width>
         <ZIndex>5</ZIndex>
@@ -214,7 +214,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
         </Paragraphs>
         <rd:DefaultName>COLEGIADO</rd:DefaultName>
         <Top>1.00132cm</Top>
-        <Left>3cm</Left>
+        <Left>2.6825cm</Left>
         <Height>0.5cm</Height>
         <Width>6cm</Width>
         <ZIndex>6</ZIndex>
@@ -240,7 +240,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
           </Paragraph>
         </Paragraphs>
         <Top>1.00132cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>0.50265cm</Height>
         <Width>2.5cm</Width>
         <ZIndex>7</ZIndex>
@@ -267,7 +267,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
         </Paragraphs>
         <rd:DefaultName>Textbox11</rd:DefaultName>
         <Top>3.45758cm</Top>
-        <Left>0.5cm</Left>
+        <Left>0.1825cm</Left>
         <Height>0.6cm</Height>
         <Width>8.5cm</Width>
         <ZIndex>8</ZIndex>
@@ -288,7 +288,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="Fecha nacimiento: " + FormatDateTime(First(Fields!FECHAN.Value, "dsPaciente"), DateFormat.ShortDate)</Value>
+                <Value>="Fecha de nacimiento: " + FormatDateTime(First(Fields!FECHAN.Value, "dsPaciente"), DateFormat.ShortDate)</Value>
                 <Style />
               </TextRun>
             </TextRuns>
@@ -297,7 +297,7 @@ First(Fields!APELLIDO2.Value, "dsMedico")</Value>
         </Paragraphs>
         <rd:DefaultName>Textbox12</rd:DefaultName>
         <Top>3.45758cm</Top>
-        <Left>9.10583cm</Left>
+        <Left>8.78833cm</Left>
         <Height>0.6cm</Height>
         <Width>7.14222cm</Width>
         <ZIndex>9</ZIndex>
@@ -361,7 +361,7 @@ Torrevieja (Alicante),  03184 </Value>
         </Paragraphs>
         <rd:DefaultName>Textbox28</rd:DefaultName>
         <Top>1.78528cm</Top>
-        <Left>14.04646cm</Left>
+        <Left>13.72896cm</Left>
         <Height>1.60015cm</Height>
         <Width>4.63604cm</Width>
         <ZIndex>10</ZIndex>
@@ -380,23 +380,405 @@ Torrevieja (Alicante),  03184 </Value>
         <Value>clinicasiesta</Value>
         <MIMEType>image/bmp</MIMEType>
         <Sizing>Fit</Sizing>
-        <Left>12.4325cm</Left>
+        <Left>12.115cm</Left>
         <Height>1.75cm</Height>
         <Width>6.25cm</Width>
         <ZIndex>11</ZIndex>
         <Style />
       </Image>
+      <Rectangle Name="rectangle2">
+        <ReportItems>
+          <Textbox Name="TRATAMIENTO2">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=First(Fields!TRATAMIENTO.Value, "CMDataSet_rpt_Recetas")</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>TRATAMIENTO</rd:DefaultName>
+            <Top>1.19708cm</Top>
+            <Left>0.25cm</Left>
+            <Height>3.37688cm</Height>
+            <Width>17.25cm</Width>
+            <Style>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Image Name="Image3">
+            <Source>External</Source>
+            <Value>=Parameters!FirmaMedicoPath.Value</Value>
+            <Sizing>FitProportional</Sizing>
+            <Top>4.75035cm</Top>
+            <Left>0.25883cm</Left>
+            <Height>1.04174cm</Height>
+            <Width>8.49117cm</Width>
+            <ZIndex>1</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Image>
+        </ReportItems>
+        <DataElementOutput>ContentsOnly</DataElementOutput>
+        <Top>18.04313cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>5.94438cm</Height>
+        <Width>18cm</Width>
+        <ZIndex>12</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Rectangle>
+      <Textbox Name="FECHA2">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!FECHA.Value, "CMDataSet_rpt_Recetas")</Value>
+                <Style>
+                  <Format>D</Format>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>FECHA</rd:DefaultName>
+        <Top>22.86708cm</Top>
+        <Left>10.92367cm</Left>
+        <Height>0.63492cm</Height>
+        <Width>6.75cm</Width>
+        <ZIndex>13</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="NOMBRE2">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!NOMBRE.Value, "dsPaciente") &amp; " " &amp; First(Fields!APELLIDO1.Value, "dsPaciente") &amp; " " &amp; First(Fields!APELLIDO2.Value, "dsPaciente")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>NOMBRE</rd:DefaultName>
+        <Top>16.30758cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>0.63492cm</Height>
+        <Width>8.5cm</Width>
+        <ZIndex>14</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="textbox3">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>PACIENTE:</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>textbox1</rd:DefaultName>
+        <Top>15.80758cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>0.50265cm</Height>
+        <Width>6.24339cm</Width>
+        <ZIndex>15</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="DESCRIPCION2">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!DESCRIPCION.Value, "CMDataSet_rpt_Recetas")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>DESCRIPCION</rd:DefaultName>
+        <Top>18.31958cm</Top>
+        <Left>0.42367cm</Left>
+        <Height>0.75cm</Height>
+        <Width>17.25cm</Width>
+        <ZIndex>16</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="NOMBREMEDICO2">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>="Médico : " &amp; First(Fields!NOMBRE.Value, "dsMedico") &amp; " " &amp; First(Fields!APELLIDO1.Value, "dsMedico") &amp; " " &amp; First(Fields!APELLIDO2.Value, "dsMedico")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>NOMBREMEDICO</rd:DefaultName>
+        <Top>14.11708cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>0.63492cm</Height>
+        <Width>8.75cm</Width>
+        <ZIndex>17</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="COLEGIADO2">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!COLEGIADO.Value, "dsMedico")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>COLEGIADO</rd:DefaultName>
+        <Top>14.86708cm</Top>
+        <Left>2.67367cm</Left>
+        <Height>0.5cm</Height>
+        <Width>6cm</Width>
+        <ZIndex>18</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="textbox4">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>COLEGIADO:</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <Top>14.86708cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>0.50265cm</Height>
+        <Width>2.5cm</Width>
+        <ZIndex>19</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox13">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>="DNI/NIE/Pasaporte: " + First(Fields!DNI.Value, "dsPaciente") + First(Fields!NIE.Value, "dsPaciente") + First(Fields!PASAPORTE.Value, "dsPaciente")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox11</rd:DefaultName>
+        <Top>17.32334cm</Top>
+        <Left>0.17367cm</Left>
+        <Height>0.6cm</Height>
+        <Width>8.5cm</Width>
+        <ZIndex>20</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox14">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>="Fecha de nacimiento: " + Microsoft.VisualBasic.Strings.FormatDateTime(First(Fields!FECHAN.Value, "dsPaciente"), Microsoft.VisualBasic.DateFormat.ShortDate)</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox12</rd:DefaultName>
+        <Top>17.32334cm</Top>
+        <Left>8.7795cm</Left>
+        <Height>0.6cm</Height>
+        <Width>7.14222cm</Width>
+        <ZIndex>21</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox29">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>C/ROSSINI, 2 (URB.LA SIESTA)
+Torrevieja (Alicante),  03184 </Value>
+                <Style>
+                  <FontSize>8pt</FontSize>
+                  <Color>DimGray</Color>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Email: info@clinicasiesta.es</Value>
+                <Style>
+                  <FontSize>8pt</FontSize>
+                  <Color>DimGray</Color>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Telef: 96 6784195 </Value>
+                <Style>
+                  <FontSize>8pt</FontSize>
+                  <Color>DimGray</Color>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox28</rd:DefaultName>
+        <Top>15.65104cm</Top>
+        <Left>13.72013cm</Left>
+        <Height>1.60015cm</Height>
+        <Width>4.63604cm</Width>
+        <ZIndex>22</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Image Name="image2">
+        <Source>Embedded</Source>
+        <Value>clinicasiesta</Value>
+        <MIMEType>image/bmp</MIMEType>
+        <Sizing>Fit</Sizing>
+        <Top>13.86576cm</Top>
+        <Left>12.10617cm</Left>
+        <Height>1.75cm</Height>
+        <Width>6.25cm</Width>
+        <ZIndex>23</ZIndex>
+        <Style />
+      </Image>
     </ReportItems>
-    <Height>10.41279cm</Height>
+    <Height>24.72834cm</Height>
     <Style />
   </Body>
-  <Width>19cm</Width>
+  <Width>18.365cm</Width>
   <Page>
-    <PageHeight>14.5cm</PageHeight>
+    <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
-    <LeftMargin>0.5cm</LeftMargin>
-    <RightMargin>0.5cm</RightMargin>
-    <TopMargin>3cm</TopMargin>
+    <LeftMargin>2cm</LeftMargin>
+    <RightMargin>0cm</RightMargin>
+    <TopMargin>1.5cm</TopMargin>
     <BottomMargin>0.5cm</BottomMargin>
     <ColumnSpacing>1cm</ColumnSpacing>
     <Style />
