--- a/centro medico/RDLC/custom/siesta/Derivacion.rdlc
+++ b/centro medico/RDLC/custom/siesta/Derivacion.rdlc
@@ -17,10 +17,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox2</rd:DefaultName>
-        <Top>4.25cm</Top>
-        <Left>0.75cm</Left>
+        <Top>4.03528cm</Top>
+        <Left>3cm</Left>
         <Height>0.5cm</Height>
-        <Width>6cm</Width>
+        <Width>8.37067cm</Width>
         <Style>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
@@ -43,10 +43,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox4</rd:DefaultName>
-        <Top>4.25cm</Top>
-        <Left>8.25cm</Left>
+        <Top>5.70556cm</Top>
+        <Left>3.5cm</Left>
         <Height>0.5cm</Height>
-        <Width>7.25cm</Width>
+        <Width>12.85916cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <PaddingLeft>2pt</PaddingLeft>
@@ -70,7 +70,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox5</rd:DefaultName>
-        <Top>5cm</Top>
+        <Top>6.43528cm</Top>
         <Left>0.75cm</Left>
         <Height>0.5cm</Height>
         <Width>1.75cm</Width>
@@ -100,10 +100,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox6</rd:DefaultName>
-        <Top>5cm</Top>
-        <Left>2.5cm</Left>
+        <Top>6.43528cm</Top>
+        <Left>2.5119cm</Left>
         <Height>0.5cm</Height>
-        <Width>13cm</Width>
+        <Width>25.5531cm</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -130,10 +130,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox7</rd:DefaultName>
-        <Top>6.25cm</Top>
+        <Top>7.94639cm</Top>
         <Left>0.75cm</Left>
         <Height>5cm</Height>
-        <Width>14.7619cm</Width>
+        <Width>27.315cm</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -160,7 +160,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox8</rd:DefaultName>
-        <Top>11.5cm</Top>
+        <Top>13.44028cm</Top>
         <Left>0.75cm</Left>
         <Height>0.50265cm</Height>
         <Width>1.75cm</Width>
@@ -190,8 +190,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox9</rd:DefaultName>
-        <Top>11.5cm</Top>
-        <Left>2.75cm</Left>
+        <Top>13.405cm</Top>
+        <Left>2.57056cm</Left>
         <Height>0.50265cm</Height>
         <Width>12.75cm</Width>
         <ZIndex>6</ZIndex>
@@ -219,7 +219,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox10</rd:DefaultName>
-        <Top>3cm</Top>
+        <Top>3.03528cm</Top>
         <Left>0.75cm</Left>
         <Height>0.50265cm</Height>
         <Width>2.25cm</Width>
@@ -245,7 +245,7 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <Top>5.75cm</Top>
+        <Top>7.41111cm</Top>
         <Left>0.75cm</Left>
         <Height>0.5cm</Height>
         <Width>1.75cm</Width>
@@ -272,7 +272,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox1</rd:DefaultName>
-        <Top>3.75cm</Top>
+        <Top>4.03528cm</Top>
         <Left>0.75cm</Left>
         <Height>0.5cm</Height>
         <Width>2.25cm</Width>
@@ -302,8 +302,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox3</rd:DefaultName>
-        <Top>3.75cm</Top>
-        <Left>8.25cm</Left>
+        <Top>5.70556cm</Top>
+        <Left>0.75cm</Left>
         <Height>0.5cm</Height>
         <Width>2.75cm</Width>
         <ZIndex>10</ZIndex>
@@ -335,7 +335,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>textbox12</rd:DefaultName>
-        <Top>1.42333cm</Top>
+        <Top>1.45861cm</Top>
         <Left>0.75cm</Left>
         <Height>0.75cm</Height>
         <Width>3.23677cm</Width>
@@ -396,8 +396,8 @@ Torrevieja (Alicante),  03184 </Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox28</rd:DefaultName>
-        <Top>1.78528cm</Top>
-        <Left>11.36396cm</Left>
+        <Top>1.82056cm</Top>
+        <Left>23.42896cm</Left>
         <Height>1.60015cm</Height>
         <Width>4.63604cm</Width>
         <ZIndex>12</ZIndex>
@@ -416,25 +416,81 @@ Torrevieja (Alicante),  03184 </Value>
         <Value>clinicasiesta</Value>
         <MIMEType>image/bmp</MIMEType>
         <Sizing>Fit</Sizing>
-        <Top>0cm</Top>
-        <Left>9.75cm</Left>
+        <Left>21.815cm</Left>
         <Height>1.75cm</Height>
         <Width>6.25cm</Width>
         <ZIndex>13</ZIndex>
         <Style />
       </Image>
+      <Textbox Name="textbox13">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Parameters!FechaNacimiento.Value</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>textbox4</rd:DefaultName>
+        <Top>4.74389cm</Top>
+        <Left>5.2425cm</Left>
+        <Height>0.5cm</Height>
+        <Width>3.7575cm</Width>
+        <ZIndex>14</ZIndex>
+        <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="textbox14">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>FECHA DE NACIMIENTO:</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>textbox1</rd:DefaultName>
+        <Top>4.74389cm</Top>
+        <Left>0.75cm</Left>
+        <Height>0.5cm</Height>
+        <Width>4.536cm</Width>
+        <ZIndex>15</ZIndex>
+        <Style>
+          <BottomBorder>
+            <Style>Solid</Style>
+          </BottomBorder>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
-    <Height>12.00265cm</Height>
+    <Height>13.98526cm</Height>
     <Style />
   </Body>
-  <Width>16cm</Width>
+  <Width>28.065cm</Width>
   <Page>
-    <PageHeight>14.8cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
+    <PageHeight>21cm</PageHeight>
+    <PageWidth>29.7cm</PageWidth>
     <InteractiveHeight>29.7cm</InteractiveHeight>
-    <LeftMargin>0.5cm</LeftMargin>
+    <LeftMargin>1cm</LeftMargin>
     <RightMargin>0.5cm</RightMargin>
-    <TopMargin>0.5cm</TopMargin>
+    <TopMargin>1cm</TopMargin>
     <BottomMargin>0.5cm</BottomMargin>
     <ColumnSpacing>1cm</ColumnSpacing>
     <Style />
@@ -470,6 +526,11 @@ Torrevieja (Alicante),  03184 </Value>
       <DataType>String</DataType>
       <AllowBlank>true</AllowBlank>
       <Prompt>Report_Parameter_5</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="FechaNacimiento">
+      <DataType>String</DataType>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
   <EmbeddedImages>
