Corrección de reportes personalizados

--- a/centro medico/RDLC/custom/siesta/AnaliticaPeticion.rdlc
+++ b/centro medico/RDLC/custom/siesta/AnaliticaPeticion.rdlc
@@ -318,7 +318,7 @@ FROM         ANALITICAS</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value />
+                                  <Value>Descripción</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -434,10 +434,8 @@ FROM         ANALITICAS</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value />
-                                  <Style>
-                                    <FontSize>8pt</FontSize>
-                                  </Style>
+                                  <Value>=First(Fields!DESCRIPCION.Value, "CMDataSet_ANALITICAS")</Value>
+                                  <Style />
                                 </TextRun>
                               </TextRuns>
                               <Style />
@@ -455,7 +453,6 @@ FROM         ANALITICAS</CommandText>
                           </Style>
                         </Textbox>
                         <ColSpan>5</ColSpan>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell />
